# aula09_bootcamp

./: dados.csv  decorator_inutil.py  etl.py  exemplo_00.py  exemplo_sentry.py  logging_exemplo_erros.py  pipeline.py  pyproject.toml  singleton_.py  tenacity_exemplo.py  timer_decorator.py  utils_log.py
data/: coleta_dia01.json
